--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "description": "API for the portfolio backend",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Daniel Zarate",
   "license": "MIT",
